kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        name: backend
    spec:
      restartPolicy: Always
      containers:
        - name: backend
          image: amalthundiyil/backend:latest
          imagePullPolicy: Always
          command: ["gunicorn"]
          args: ["server.wsgi", "--bind", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
