kubernetes/frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 8080
      protocol: TCP
  selector:
    app: frontend
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: amalthundiyil/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
